--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Gzip-BinarySearch
-version:            0.9
+version:            0.91
 abstract:           ~
 author:  []
 license:            unknown
@@ -11,6 +11,7 @@ build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     Gzip::RandomAccess:  0.9
+    Test::Exception:     0.22
     Test::More:          0.47
     version:             0
 no_index:
